issue #ULF-176 by martinyde: Removed js truncate from several description fields

--- a/profiles/ulf/themes/ulftheme/css/ulf-styles.css
+++ b/profiles/ulf/themes/ulftheme/css/ulf-styles.css
@@ -287,7 +287,7 @@ table {
 body {
   background-color: #f2f2f2;
   color: #333;
-  font: 14px/1.5 "Asap", sans-serif; }
+  font: 14px/1.3 "Asap", sans-serif; }
 
 h1,
 h2,
@@ -297,7 +297,7 @@ h5,
 h6 {
   margin-top: 0;
   margin-bottom: .25em;
-  font-family: 14px/1.5 "Asap", sans-serif;
+  font-family: 14px/1.3 "Asap", sans-serif;
   font-weight: normal;
   /* This fixes huge spaces when a heading wraps onto two lines */
   line-height: 1.2;
@@ -356,7 +356,7 @@ ul {
 ================================================================================================================== */
 input,
 textarea {
-  font: 14px/1.5 "Asap", sans-serif; }
+  font: 14px/1.3 "Asap", sans-serif; }
 
 input[type="text"],
 input[type="password"],
@@ -902,7 +902,7 @@ textarea {
    ================================================================================================================== */
 body {
   background: #17858c;
-  font: 14px/1.5 "Asap", sans-serif;
+  font: 14px/1.3 "Asap", sans-serif;
   margin: 0 auto; }
 
 /* Layout
